cmake_minimum_required (VERSION 3.8)

add_library(pdcurses
	"deleteln.c"
	"getch.c"
	"getstr.c"
	"getyx.c"
	"inch.c"
	"inchstr.c"
	"initscr.c"
	"inopts.c"
	"insch.c"
	"insstr.c"
	"instr.c"
	"kernel.c"
	"keyname.c"
	"mouse.c"
	"move.c"
	"outopts.c"
	"overlay.c"
	"pad.c"
	"panel.c"
	"pdcclip.c"
	"pdcdisp.c"
	"pdcgetsc.c"
	"pdckbd.c"
	"pdcscrn.c"
	"pdcsetsc.c"
	"pdcutil.c"
	"printw.c"
	"refresh.c"
	"scanw.c"
	"scr_dump.c"
	"scroll.c"
	"slk.c"
	"termattr.c"
	"touch.c"
	"util.c"
	"window.c"
	"addch.c"
	"addchstr.c"
	"addstr.c"
	"attr.c"
	"beep.c"
	"bkgd.c"
	"border.c"
	"clear.c"
	"color.c"
	"debug.c"
	"delch.c")

target_include_directories(pdcurses PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")